--- a/src/components/Shelf.astro
+++ b/src/components/Shelf.astro
@@ -1,28 +1,142 @@
 ---
 import Jewelry from "./Jewelry.astro";
-const {indhold} = Astro.props;
-const content = Array.isArray(indhold)
-    ? indhold
-    : [indhold]
 ---
 
-<div>
-    {
-        content.map((jewelry) => (
-            <Jewelry
-            link={"/jewelry/" + jewelry.slug}
-            name={jewelry.name}
-            price={jewelry.price}
-            galleryphoto={`../../product_img/${jewelry.galleryphoto}`}
-            photo1={`../../product_img/${jewelry.photo1}`}
-            photo2={`../../product_img/${jewelry.photo2}`}
-            description={jewelry.description}
-        />
-        ))
-    }
-</div>
+<a>
+    <img>
+        <div class="hover_text">
+            <h2 id="h2smykker"></h2>
+            <h3 id="h3smykker"></h3>
+            <p id="readmore">Læs mere</p>
+        </div>
+</a>
+
 
 
 <style>
+    p {
+        font-size: var(--p_mobile);
+        margin-left: 20px;
+        margin-right: 20px;
+        max-width: 800px;
+    }
 
+    img {
+        width: 100%;
+
+    }
+
+    #h2smykker {
+        color: var(--beige);
+        font-size: var(--h2_mobile);
+        font-weight: 100;
+        }
+
+        #h3smykker {
+        color: var(--beige);
+        font-size: var(--h3_mobile);
+        font-weight: 100;
+        }
+
+
+    .hover_text {
+        display: none;
+    }
+
+    a {
+        display: grid;
+        grid-template-columns: 1fr;
+        text-decoration: none;
+        color: var(--beige);
+    }
+
+
+    #readmore {
+        padding-top: 20px;
+        display: inline;
+        position: relative;
+        overflow: hidden;
+    }
+
+    #readmore:after {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        right: 0;
+        width: 0;
+        bottom: 0px;
+        background: var(--beige);
+        height: 2px;
+        transition-property: width;
+        transition-timing-function: ease-out;
+    }
+
+    #readmore:hover:after,
+    #readmore:focus:after,
+    #readmore:active:after {
+        left: 0;
+        right: auto;
+        width: 100%;
+        transition-duration: 0.4s;
+    }
+
+    @media (min-width: 1000px) {
+        p {
+        font-size: var(--p_desktop);
+        margin-inline: auto;
+        }
+
+        #h2smykker {
+        color: var(--beige);
+        font-weight: 100;
+        font-size: var(--h2_mobile);
+        }
+
+        #h3smykker {
+        color: var(--beige);
+        font-size: var(--h3_mobile);
+        font-weight: 100;
+        }
+
+    a {
+        z-index: 3;
+    }
+
+
+
+    .hover_text {
+        display: block;
+        grid-row: 1/2;
+        grid-column: 1/2;
+        z-index: 2;
+        margin-block: auto;
+        visibility: hidden;
+        color: var(--beige);
+    }
+
+
+    a:hover .hover_text{
+        visibility: visible;
+        transition: .5s ease;
+    }
+
+    a:hover img {
+        opacity: 0.2;
+        transition: .5s ease;
+    }
+
+    img {
+        grid-row: 1/2;
+        grid-column: 1/2;
+        z-index: 0;
+    }
+
+    #readmore {
+        color: var(--beige);
+        font-size: var(--p_mobile);
+
+    }
+
+
+    }
 </style>
